--- a/index.html
+++ b/index.html
@@ -618,47 +618,54 @@
   </section>
   
   <!-- CV / TIMELINE -->
-  <section id="cv">
-    <h2>Experience & Education Timeline</h2>
+ <section id="cv">
+  <h2>Education</h2>
+  <p class="section-intro">
+    An overview of my educational background within data, design and digital transformation.
+  </p>
 
-    <div class="timeline" id="timeline">
-      <article class="timeline-item">
-        <div class="timeline-dot"></div>
-        <div class="timeline-content">
-          <div class="timeline-year">2025</div>
-          <p><strong>Teaching Assistant – Roskilde University</strong></p>
-          <p>Supporting students, facilitating learning and translating theory into usable practice.</p>
-        </div>
-      </article>
+  <div class="timeline" id="timeline">
+    <!-- Cand.IT -->
+    <article class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-content">
+        <div class="timeline-year">2024–2026</div>
+        <p><strong>Cand.IT in Digital Transformation</strong> – Roskilde University</p>
+        <p>
+          Specialisation in digital transformation, UX, design, digital infrastructures,
+          automation and organisational change.
+        </p>
+      </div>
+    </article>
 
-      <article class="timeline-item">
-        <div class="timeline-dot"></div>
-        <div class="timeline-content">
-          <div class="timeline-year">2024–2026</div>
-          <p><strong>Cand.IT Digital Transformation</strong></p>
-          <p>Focus on UX, design, digital infrastructures, automation and organisational change.</p>
-        </div>
-      </article>
+    <!-- Bachelor Data Analysis -->
+    <article class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-content">
+        <div class="timeline-year">2021–2023</div>
+        <p><strong>Bachelor in Data Analysis</strong> – Copenhagen Business Academy</p>
+        <p>
+          Focus on quantitative methods, statistics, modelling, data interpretation
+          and building data-driven insights.
+        </p>
+      </div>
+    </article>
 
-      <article class="timeline-item">
-        <div class="timeline-dot"></div>
-        <div class="timeline-content">
-          <div class="timeline-year">2021–2023</div>
-          <p><strong>Bachelor in Data Analysis</strong></p>
-          <p>Quantitative methods, modelling, statistics, data interpretation and problem-solving.</p>
-        </div>
-      </article>
+    <!-- AP Degree -->
+    <article class="timeline-item">
+      <div class="timeline-dot"></div>
+      <div class="timeline-content">
+        <div class="timeline-year">2019–2021</div>
+        <p><strong>AP Degree in Marketing Management</strong> – Copenhagen Business Academy</p>
+        <p>
+          Studies in marketing, communication and business, combined with an interest
+          in digital tools and analysis.
+        </p>
+      </div>
+    </article>
+  </div>
+</section>
 
-      <article class="timeline-item">
-        <div class="timeline-dot"></div>
-        <div class="timeline-content">
-          <div class="timeline-year">Professional experience</div>
-          <p><strong>Data, communication & digital initiatives</strong></p>
-          <p>Working with data insights, communication, branding and digital projects in organisations.</p>
-        </div>
-      </article>
-    </div>
-  </section>
   
   <!-- CONTACT -->
   <section id="contact">
