--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@
       <!-- 2025 - Sunflower -->
       <article class="project" data-category="ux critical">
         <div class="project-media">
-          <img src="images/oeje1.jpg" alt="Critical design explorations around the sunflower lanyard" />
+          <img src="images/solsikke/IMG_6874 2.JPG" alt="Critical design explorations around the sunflower lanyard" />
         </div>
         <h3>Det man ikke ser – Critical Design on the Sunflower Lanyard</h3>
         <p class="project-meta">2025 · Cand.IT, semester project · Critical &amp; speculative design</p>
