--- a/index.html
+++ b/index.html
@@ -701,7 +701,7 @@
           <img src="images/Brondby/BrondbyMain.png" alt="Data visualisation for Brøndby IF football analytics" />
         </div>
         <h3>Brøndby IF – Data-Driven Football Analytics</h3>
-        <p class="project-meta">2022 · Bachelor project · Sports analytics</p>
+        <p class="project-meta">2022 · Bachelor, semester project · Sports analytics</p>
         <p>
           Expected Goals modelling and performance analysis based on match event data to support more
           data-driven tactical decisions.
