--- a/bbk.html
+++ b/bbk.html
@@ -294,7 +294,7 @@ footer{
 </div>
 
 <figure>
-  <img src="images/bkk-blueprint-placeholder.png">
+  <img src="images/BBK/Service Blueprint design.pdf">
   <figcaption>
     Service blueprint / RPA flow placeholder
   </figcaption>
