--- a/lumibreath.html
+++ b/lumibreath.html
@@ -391,7 +391,7 @@ footer{
   <p class="video-label">Breathing sequence demo</p>
   <div class="video-frame">
     <!-- Replace with your actual video file -->
-    <video src="videos/lumibreath-breathing.mp4"
+    <video src="images/lumibreath/d7df42ea-cee5-4ef8-a12c-93dbd4e62fa1.mp4"
            autoplay
            loop
            muted
@@ -411,9 +411,13 @@ footer{
 
   <div class="carousel-frame" data-carousel="lumibreath">
     <!-- Ret your own billeder ind her -->
-    <img src="images/lumibreath/lumibreath-prototype-1.jpg" alt="Early mechanical prototype without textile cover">
-    <img src="images/lumibreath/lumibreath-prototype-2.jpg" alt="Lamp assembled with fabric and NeoPixel ring lit">
-    <img src="images/lumibreath/lumibreath-prototype-3.jpg" alt="Close-up of breathing lamp on a desk">
+    <img src="images/lumibreath/LumiBreath wiring diagram (2).png">
+    <img src="images/lumibreath/484647343_634099369380662_6435236802792927320_n.jpg">
+    <img src="images/lumibreath/484317084_3942033182781400_5091005068871924942_n.jpg">
+    <img src="images/lumibreath/484243615_1115246100407025_4266226940727602151_n.jpg">
+    <img src="images/lumibreath/483901506_1042729184363169_412162036673755064_n.jpg">
+    <img src="images/lumibreath/2bcae914-c814-49f6-ae86-531d85a5a0d2.jpg">
+    <img src="images/lumibreath/omglight.jpg">
   </div>
 
   <div class="carousel-controls">
